chore(JVM26): minor comment cleanup
Signed-off-by: l-1squared <30831153+l-1squared@users.noreply.github.com>